<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_ros2</name>
  <version>0.0.0</version>
  <description>Localization Node</description>
  <maintainer email="gprajwalpoojari@gmail.com">Prajwal</maintainer>
  <maintainer email="pinakjani99@gmail.com">Pinak</maintainer>
  <maintainer email="aniketp1597@gmail.com">Aniket</maintainer>
  <license>Tensor Robotics</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>common_ros2</depend>
  <depend>localization_domain</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>common_domain</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>