<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_generation_ros2</name>
  <version>0.0.0</version>
  <description>Trajectory Generation Node to publish Trajectories to controls module</description>
  <maintainer email="tanmaydhasade1@gmail.com">tanmay</maintainer>
  <maintainer email="gprajwalpoojari@gmail.com">Prajwal</maintainer>
  
  <license>Tensor Robotics</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>common_domain</build_depend>
  <build_depend>trajectory_generation_domain</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>common_ros2</depend>
  <!-- <depend>visualization_msgs</depend> -->

  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>